--- a/webapp/static/lorum.css
+++ b/webapp/static/lorum.css
@@ -128,7 +128,7 @@
 
 .collapsible-header {
     font-weight: bold;
-    font-family: Arial,Verdana,sans-serif;
+    font-family: Arial, Verdana, sans-serif;
     font-size: 16px;
     color: #348b18;
     padding: 0;
@@ -149,7 +149,7 @@
 }
 
 /*.collapsible-header li + li:before {*/
-    /*content: " ◆ ";*/
+/*content: " ◆ ";*/
 /*}*/
 
 .collapsible-header-open {
@@ -163,10 +163,10 @@
 }
 
 .collapsible-close-button {
-    font-family: Arial,Verdana,sans-serif;
+    font-family: Arial, Verdana, sans-serif;
     font-size: 16px;
     font-weight: bold;
-    font-family: Arial,Verdana,sans-serif;
+    font-family: Arial, Verdana, sans-serif;
     color: #348b18;
     display: none;
 }
@@ -176,7 +176,7 @@
 }
 
 .collapsible-body {
-    font-family: Arial,Verdana,sans-serif;
+    font-family: Arial, Verdana, sans-serif;
     font-size: 15px;
     font-style: oblique;
     color: #333333;
@@ -197,12 +197,61 @@
     font-weight: bold;
 }
 
+.donation-banner {
+    font-family: Arial, Verdana, sans-serif;
+    font-size: 15px;
+    font-style: oblique;
+    color: #333333;
+}
+
+.paypal-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.donation-button {
+    background-image: url("/static/piggybank.png");
+    background-size: 24px auto;
+    background-position-y: 3px;
+    background-position-x: 3px;
+    background-repeat: no-repeat;
+    border-color: #348b18;
+    -moz-box-shadow: inset 0px 1px 0px 0px #ffffff;
+    -webkit-box-shadow: inset 0px 1px 0px 0px #ffffff;
+    box-shadow: inset 0px 1px 0px 0px #ffffff;
+    background-color: #ffffff;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    border: 1px solid #dcdcdc;
+    cursor: pointer;
+    color: #666666;
+    font-family: Arial, Verdana, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    padding-left: 36px;
+    padding-top: 4px;
+    height: 36px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #ffffff;
+}
+
+.donation-button:hover {
+    background-color: #f6f6f6;
+}
+
+.donation-button:active {
+    position: L relative;
+    top: 1px;
+}
+
 #separator {
     margin-left: 30px;
     margin-right: 30px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .suit {
@@ -221,7 +270,7 @@
 }
 
 #lorumtext {
-    font-family: Arial,Verdana,sans-serif;
+    font-family: Arial, Verdana, sans-serif;
     font-size: 16px;
     line-height: 22px;
     margin: 30px;
@@ -242,50 +291,52 @@
 }
 
 #control {
-    display:flex;
-    justify-content:center;
-    align-items:center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .moreButton {
-    -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-    -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-    box-shadow:inset 0px 1px 0px 0px #ffffff;
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
-    background:-moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
-    background:-webkit-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
-    background:-o-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
-    background:-ms-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
-    background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0);
-    background-color:#ffffff;
-    -moz-border-radius:6px;
-    -webkit-border-radius:6px;
-    border-radius:6px;
-    border:1px solid #dcdcdc;
-    display:inline-block;
-    cursor:pointer;
-    color:#666666;
-    font-family:Arial;
-    font-size:15px;
-    font-weight:bold;
-    padding:6px 24px;
-    text-decoration:none;
-    text-shadow:0px 1px 0px #ffffff;
+    -moz-box-shadow: inset 0px 1px 0px 0px #ffffff;
+    -webkit-box-shadow: inset 0px 1px 0px 0px #ffffff;
+    box-shadow: inset 0px 1px 0px 0px #ffffff;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
+    background: -moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+    background: -webkit-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+    background: -o-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+    background: -ms-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+    background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6', GradientType=0);
+    background-color: #ffffff;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    border: 1px solid #dcdcdc;
+    display: inline-block;
+    cursor: pointer;
+    color: #666666;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #ffffff;
 }
+
 .moreButton:hover {
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff));
-    background:-moz-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
-    background:-webkit-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
-    background:-o-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
-    background:-ms-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
-    background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0);
-    background-color:#f6f6f6;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff));
+    background: -moz-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+    background: -webkit-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+    background: -o-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+    background: -ms-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+    background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff', GradientType=0);
+    background-color: #f6f6f6;
 }
+
 .moreButton:active {
-    position:relative;
-    top:1px;
+    position: relative;
+    top: 1px;
 }
 
 /* latin */
